# Course_3

./: README.md
course_3/: .gitignore  main.py  pyproject.toml
course_3/tests/: test_utils.py
course_3/utils/: funcs.py  main.py
