[tool.poetry]
name = "course-3"
version = "0.1.0"
description = ""
authors = ["Lana Virina <lana.virina@gmail.com>"]
readme = "README.md"
packages = [{include = "course_3"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
datetime = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

